Fix font legibility and layout shift

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,9 @@ body,
     sans-serif;
   background-color: var(--color-darkblue);
   color: var(--color-darkyellow);
+  font-weight: 500;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /* Smooth scrolling */
